--- a/build-tools/build-infra/src/main/groovy/regenerate.icu.gradle
+++ b/build-tools/build-infra/src/main/groovy/regenerate.icu.gradle
@@ -141,7 +141,7 @@ configure(project(":lucene:analysis:icu")) {
     def targetDir = file("src/resources/org/apache/lucene/analysis/icu/segmentation")
 
     inputs.files fileTree(dir: sourceDir, include: "*.rbbi")
-    inputs.property "icuConfig", provider { icuVersionFromConfiguration(icuConfig) }
+    inputs.property "icuConfig", icu4jVersion
     outputs.files fileTree(dir: targetDir, include: "*.brk")
 
     doFirst {
@@ -290,12 +290,11 @@ configure(project(":lucene:core")) {
 
     dependsOn icuConfig
 
-    inputs.property "icuConfig", provider { icuVersionFromConfiguration(icuConfig) }
+    inputs.property "icuConfig", icu4jVersion
     outputs.file outputFile
 
     doFirst {
-      def execOps = objects.newInstance(ExecOperationsProvider).execOperations
-      execOps.javaexec({
+      buildGlobals.execOps.javaexec({
         mainClass = "groovy.lang.GroovyShell"
         classpath icuConfig, groovyConfig
 
