--- a/.github/workflows/auto-format.yml
+++ b/.github/workflows/auto-format.yml
@@ -124,7 +124,7 @@ jobs:
         if: ${{ steps.initial-validation.outcome == 'failure' }}
         run: |
           echo "Fixing formatting issues and updating lock file..."
-          ./gradlew tidy writeLocks updateLicenses
+          ./gradlew tidy writeLocks writeChecksums
 
       - name: Check if formatting fixes were made
         if: ${{ steps.initial-validation.outcome == 'failure' }}
