Revert "Ported one regeneration gradle file to java."
This reverts commit 5353ffdc91022da2ef6929690f58fa63440542f1.

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ plugins {
 
   // TODO: move to java.
   id 'regenerate.forUtil'
-  // id 'regenerate.antlr'
+  id 'regenerate.antlr'
   id 'regenerate.icu'
   id 'regenerate.javacc'
   id 'regenerate.jflex'
