--- a/build-tools/build-infra/build.gradle
+++ b/build-tools/build-infra/build.gradle
@@ -38,14 +38,9 @@ gradlePlugin {
   automatedPublishing = false
 
   plugins {
-    CheckEnvironmentPlugin {
-      id = 'lucene.root-project.check-environment'
-      implementationClass = 'org.apache.lucene.gradle.plugins.misc.CheckEnvironmentPlugin'
-    }
-
     RootProjectSetupPlugin {
       id = 'lucene.root-project.setup'
-      implementationClass = 'org.apache.lucene.gradle.plugins.misc.RootProjectSetupPlugin'
+      implementationClass = 'org.apache.lucene.gradle.plugins.misc.LuceneRootConfigurationPlugin'
     }
   }
 }
